# duckiebot_lab

./: Dockerfile  launch.sh  launch_BACKUP_16213.sh  launch_LOCAL_16213.sh
Archive/Demo3/: CMakeLists.txt  package.xml  task3.py
Archive/Driver/: package.xml
Archive/ImageStream/: ImageStream.py
Archive/LEDs/: LEDs_node.py
Archive/Old Line Detect/: lane_detection.py
Archive/RED/: demo3_OpenCV.py
Archive/kinematics_trim/: CMakeLists.txt  package.xml
Archive/yellow_line_detection/: yellow_detection.py
Code/LEDs/: CMakeLists.txt  LEDs_node.py  package.xml
Submission/Demo 3/Demo3/: Read me
Submission/Demo_1_and_2/Driver/: CMakeLists.txt
Submission/Demo_1_and_2/LEDs/: LEDs_node.py
duckiebot_lab/: launch.sh
duckiebot_lab/Archive/RED/: CMakeLists.txt  package.xml
duckiebot_lab/Archive/RecordingVideo/: CMakeLists.txt  package.xml
